k8s/backend-deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-blue
  namespace: cicd-portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: blue
  template:
    metadata:
      labels:
        app: backend
        version: blue
    spec:
      containers:
      - name: backend
        image: ganraj99215/backend:latest
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
