k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: cicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ganraj99215/backend:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: backend-storage
          mountPath: /app   # make sure your server.js writes db.sqlite here
      volumes:
      - name: backend-storage
        persistentVolumeClaim:
          claimName: backend-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: cicd
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
