k8s/sonarqube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:lts-community
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: sonarqube
  ports:
    - port: 9000
      targetPort: 9000
