k8s/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-frontend-ingress
  namespace: cicd
spec:
  rules:
  - host: cicd.devopsbyganraj.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
